# sdk-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  public-boundary.yml  release-plan-recovery.yml  release.yml
examples/: activity_options.rs  continue_as_new.rs  hello_world.rs
scripts/: check-public-boundary.sh
scripts/ci/: cli-release-plan-recovery.fixture.yml  cli_release_verifier_contract.py  component-release-recovery.py  crates-io-publish-lib.sh  publish-planned-tag.py  publish-rust-sdk.sh  test-component-release-recovery.py  test-crates-io-publish.sh  test-publish-planned-tag.py  test-publish-rust-sdk.py
src/: lib.rs
tests/: avro_compatibility.rs
tests/fixtures/: avro_generic_wrapper.json  generate_avro_compatibility.php  generate_avro_compatibility.py
