[package]
name = "durable-workflow"
version = "0.1.2"
edition = "2021"
description = "First-party Rust SDK for Durable Workflow workers and clients"
license = "MIT"
repository = "https://github.com/durable-workflow/sdk-rust"
homepage = "https://durable-workflow.com"
documentation = "https://rust.durable-workflow.com/"
readme = "README.md"
rust-version = "1.86"
keywords = ["durable", "workflow", "temporal", "worker", "sdk"]
categories = ["api-bindings", "asynchronous"]
include = ["/src/**", "/examples/**", "/Cargo.toml", "/README.md", "/LICENSE"]

[package.metadata.durable-workflow]
supported-server-versions = ">=0.2,<0.3"
worker-protocol-version = "1.2"
control-plane-version = "2"
query-tasks = true
query-task-minimum-worker-protocol-version = "1.8"
replayed-instance-state-queries = true
query-state-model = "deterministic-workflow-replay"
snapshot-inspection-queries = true
payload-codecs = ["avro", "json"]

[lib]
name = "durable_workflow"
path = "src/lib.rs"

[dependencies]
apache-avro = { version = "0.21", default-features = false }
base64 = "0.22"
# Keep apache-avro's dependency resolution compatible with the Rust 1.86 MSRV.
bon = { version = "=3.8.1", default-features = false }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
